[package]
name = "printer-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
embassy-sync = { version = "0.7.1", default-features = false, features = ["defmt"] }
embassy-time = { version = "0.4.0", default-features = false, features = ["tick-hz-1_000_000"] }
embedded-hal = "1.0"
rp2040-hal = { version = "0.11.0", optional = true }

[features]
rp2040 = ["rp2040-hal", "embassy-rp"]