[package]
     name = "printer-host"
     version = "0.1.0"
     edition = "2021"

     [dependencies]
     printer-kinematics = { path = "../printer-kinematics" }
     eframe = { version = "0.32.1", features = ["wgpu"] }
     wgpu = "26.0.1"  # Updated to the latest version
     toml = "0.9.5"
     serde = { version = "1.0", features = ["derive"] }
     nalgebra = "0.34"
     libloading = { version = "0.8", optional = true }
     tokio = { version = "1.0", features = ["full"] }
     clap = { version = "4.5", features = ["derive"] }
     bytemuck = "1.16"
     winit = "0.30"
     futures = "0.3"
     serialport = "4.4"

     [features]
     dynamic = ["printer-kinematics/dynamic", "libloading"]